# metalrain

./: .gitignore  .gitmodules  Audit.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DEVELOPER-README.md  LICENSE  MIGRATION-0_16.md  MIGRATION.md  README.md  README_sdf_atlas.md  SURFACE_NOISE.md  StructureAudit.md  audit.md  ball_matcher.js  compute-noop-shader.prompt.md  debug_interface_plan.md  design-doc.md  gen-atlas.ps1  glyph-integration.prompt.md  index.html  launch.ps1  level-loader.prompt.md  menu-prompt.md  meta_ball_metadata_prompt.md  metaballs-cluster-states.prompt.md  metaballs_test.js  north-star-structure.md  post-process-shader-prompt.md  prompt-present-fullscreen.md  prompt-webgpu-preconditions.prompt.md  prompt.md  refine-compute.prompt.md  remove-noop.prompt.md  restore_shader.prompt.md  sdf-multistage-prompt.md  sdf.prompt.md  storage-buffer.prompt.md  stories.md  (+4 more)
.cargo/: config.toml
.github/: copilot-instructions.md
chatmodes/: ball-state-colors.chatmode.md  debug-spawn-button.chatmode.md  distance-based-clustering-v2.chatmode.md  reversible-color-tween-v2.chatmode.md  rust-gpt-4.1-beast-mode.chatmode.md
crates/: README.md
crates/event_core/: Cargo.toml  README.md
crates/event_core/src/: event.rs  lib.rs  middleware.rs  queue.rs  reducer.rs
crates/event_core/src/handlers/: mod.rs
crates/event_core/tests/: custom_mapping_tests.rs  debounce_cooldown_tests.rs  determinism_tests.rs  handler_tests.rs  middleware_tests.rs  queue_tests.rs
crates/game/: Cargo.toml  README.md
crates/game/src/: lib.rs
crates/game_assets/: Cargo.toml  README.md
crates/game_assets/src/: lib.rs
crates/game_core/: Cargo.toml  README.md
crates/game_core/src/: app_state.rs  bundles.rs  components.rs  events.rs  lib.rs  resources.rs  spawning.rs
crates/game_physics/: Cargo.toml  README.md
crates/game_physics/src/: config.rs  lib.rs  systems.rs  ui.rs
crates/game_rendering/: Cargo.toml  README.md
crates/game_rendering/src/: camera.rs  compositor.rs  layers.rs  lib.rs  plugin.rs  targets.rs
crates/metaball_renderer/: Cargo.toml  OPTIMIZATION.md  README.md
crates/metaball_renderer/assets/shaders/: compute_3d_normals.wgsl  compute_metaballs.wgsl  present_fullscreen.wgsl
crates/metaball_renderer/benches/: coordinates.rs
crates/metaball_renderer/src/: components.rs  coordinates.rs  diagnostics.rs  embedded_shaders.rs  internal.rs  lib.rs  pack.rs  settings.rs  spatial.rs
crates/metaball_renderer/src/compute/: mod.rs  pipeline.rs  pipeline_normals.rs  types.rs
crates/metaball_renderer/src/present/: mod.rs
crates/metaball_renderer/tests/: coordinate_clamp.rs  snapshot_render.rs
crates/scaffold/: Cargo.toml  README.md
crates/scaffold/src/: lib.rs  resources.rs
crates/scaffold/src/systems/: arena.rs  camera.rs  hud.rs  input.rs  mod.rs
crates/widget_renderer/: Cargo.toml  README.md
crates/widget_renderer/src/: lib.rs
demos/architecture_test/: Cargo.toml
demos/architecture_test/src/: lib.rs  main.rs
demos/compositor_test/: Cargo.toml  REFACTORING.md  UI_FEEDBACK_FIXES.md  UI_REFACTORING.md
demos/compositor_test/assets/shaders/: compositor.wgsl
demos/compositor_test/src/: components.rs  constants.rs  effects.rs  forces.rs  hud.rs  input.rs  lib.rs  main.rs  resources.rs  scene_setup.rs  ui.rs
demos/demo_launcher/: Cargo.toml  README.md
demos/demo_launcher/src/: main.rs
demos/metaballs_test/: Cargo.toml
demos/metaballs_test/src/: debug_vis.rs  lib.rs  main.rs  simulation.rs  ui.rs
demos/physics_playground/: Cargo.toml  README.md  REFACTORING.md  TechnicalDesign.md
demos/physics_playground/src/: components.rs  constants.rs  input.rs  lib.rs  main.rs  resources.rs  scene_setup.rs  ui.rs
distance-field-generator/: BUILD_GUIDE.md  chart_script.py  sample_sdf_registry.json  script.py  script_1.py  script_2.py  script_3.py  script_4.py  script_5.py  sdf_generator_summary.csv  shader_usage_example.glsl
game/: Cargo.toml  Readme.md  plan.md
game/bevy_app/: Cargo.toml
game/bevy_app/src/: main.rs
game/crates/bevy_app/: Cargo.toml
game/crates/bevy_app/src/: main.rs
game/crates/config/: Cargo.toml
game/crates/config/src/: lib.rs
game/crates/core/: Cargo.toml
game/crates/core/src/: lib.rs
game/crates/debug_tools/: Cargo.toml
game/crates/debug_tools/src/: lib.rs
game/crates/gameplay/: Cargo.toml
game/crates/gameplay/src/: cluster.rs  emitter.rs  interactions.rs  lib.rs  spawning.rs
game/crates/hot_reload/: Cargo.toml
game/crates/hot_reload/src/: lib.rs
game/crates/integration_tests/: Cargo.toml
game/crates/integration_tests/src/: lib.rs
game/crates/metaballs/: Cargo.toml
game/crates/metaballs/src/: lib.rs
game/crates/physics/: Cargo.toml
game/crates/physics/src/: lib.rs
game/crates/rendering/: Cargo.toml
game/crates/rendering/src/: background.rs  circles.rs  golden.rs  instancing.rs  lib.rs  palette.rs
game/examples/: .gitkeep
game/examples/emitter_demo/: Cargo.toml
game/examples/emitter_demo/src/: main.rs
game/examples/full_demo/: Cargo.toml
game/examples/full_demo/src/: main.rs
game/examples/interactions_demo/: Cargo.toml
game/examples/interactions_demo/src/: main.rs
game/examples/metaballs_demo/: Cargo.toml
game/examples/metaballs_demo/src/: main.rs
game/examples/spawn_demo/: Cargo.toml
game/examples/spawn_demo/src/: main.rs
game/scripts/: wasm_build_check.ps1
legacy/: .gitignore  Cargo.toml
pocs/compute_balls/: Cargo.toml  USAGE.md
pocs/compute_balls/assets/shaders/: compute_metaballs.wgsl  compute_metaballs_lowres.wgsl  present_fullscreen.wgsl
pocs/compute_balls/src/: bouncy.rs  constants.rs  main.rs  metaball.rs  metaball_plugin.rs  systems.rs
pocs/compute_balls/src/compute/: mod.rs  pipeline.rs  types.rs
pocs/compute_balls/src/present/: mod.rs
pocs/compute_balls/tests/: debug_mode.rs
prompts/: cluster-pop-explosive-fade.prompt.md  cluster-pop-on-tap.prompt.md  cluster-pop-paddle-transform.prompt.md  cluster-standby-fade.prompt.md  enforce-webgpu-only-bevy.prompt.md  highlight-big-clusters.prompt.md  metaball-surface-noise.prompt.md  (+5 more)
src/: background.rs  (+22 more)
(+196 files in other folders)
