[workspace]
members = [
    "crates/metaball_renderer",
    # New core/game crates
    "crates/game_core",
    "crates/game",
    # Centralized event & input reduction crate (Event/Input Reduction Subsprint)
    "crates/event_core",
    # Physics crate (Sprint 2)
    "crates/game_physics",
    # Rendering crate (Sprint 3)
    "crates/game_rendering",
    # Widget renderer (Sprint 4)
    "crates/widget_renderer",
    # Centralized assets crate
    "crates/game_assets",
    # Background renderer crate (Sprint: Background Renderer)
    "crates/background_renderer",
    # Demos
    "demos/metaballs_test",
    "demos/compositor_test",
    "demos/architecture_test",
    # Physics playground demo (Sprint 2)
    "demos/physics_playground",
    # Unified launcher for demos
    "demos/demo_launcher",
    # Focused input integration + diagnostics demo
    "demos/input_demo",
]
exclude = [
    "external/bevy"
]
resolver = "2"

# Centralized dependency versions (Sprint 1 workspace-level dependencies)
[workspace.dependencies]
bevy = { version = "0.16.1", features = ["bevy_winit", "bevy_sprite", "bevy_ui", "bevy_text", "file_watcher"] }
serde = { version = "1.0", features = ["derive"] }
# Added parallel feature to match demo usage and ensure future multi-threaded physics.
bevy_rapier2d = { version = "0.30", features = ["simd-stable", "parallel"] }

[workspace.package]
edition = "2021"

