[workspace]
members = [
    "crates/metaball_renderer",
    # New core/game crates
    "crates/game_core",
    "crates/game",
    # Centralized event & input reduction crate (Event/Input Reduction Subsprint)
    "crates/event_core",
    # Physics crate (Sprint 2)
    "crates/game_physics",
    # Rendering crate (Sprint 3)
    "crates/game_rendering",
    # Widget renderer (Sprint 4)
    "crates/widget_renderer",
    # Centralized assets crate
    "crates/game_assets",
    # Background renderer crate (Sprint: Background Renderer)
    "crates/background_renderer",
    # Integration scaffold plugin (Sprint: Scaffold Integration)
    "crates/scaffold",
    # Demos
    "demos/metaballs_test",
    "demos/compositor_test",
    "demos/architecture_test",
    # Physics playground demo (Sprint 2)
    "demos/physics_playground",
    # Unified launcher for demos
    "demos/demo_launcher",
    # Focused input integration + diagnostics demo
    "demos/input_demo",
    # New standardized assets demonstration demo
    "demos/asset_test",
    # UI Demo POC exploring Bevy-HUI (UI Scaffold Sprint)
    "demos/ui_demo",
]
exclude = [
    "external/bevy"
]
resolver = "2"

# Centralized dependency versions (Sprint 1 workspace-level dependencies)
[workspace.dependencies]
# NOTE: Removed the `file_watcher` feature from Bevy for WASM compatibility.
# The Bevy `file_watcher` feature triggers a compile_error! on wasm32 targets.
# If native hot-reload is desired, we can re-introduce it behind an optional
# workspace feature (e.g. `native_dev`) that is only used on desktop builds.
bevy = { version = "0.16.1", features = ["bevy_winit", "bevy_sprite", "bevy_ui", "bevy_text", "webgpu"] }
serde = { version = "1.0", features = ["derive"] }
# Removed parallel feature for WASM compatibility.
# The parallel feature uses rayon which doesn't work on wasm32 targets.
# For native builds, rapier still works efficiently; parallel is primarily an optimization.
bevy_rapier2d = { version = "0.30", features = ["simd-stable"] }

[workspace.package]
edition = "2021"
license = "GPL-3.0"


