[workspace]
members = [
  "crates/config",
  "crates/core",
  "crates/physics",
  "crates/rendering",
  "crates/gameplay",
  "crates/metaballs",
  "crates/debug_tools",
  "crates/hot_reload",
  "crates/integration_tests",
  "bevy_app",
  "examples/spawn_demo",
  "examples/emitter_demo",
  "examples/interactions_demo",
  "examples/metaballs_demo",
  "examples/full_demo"
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Adam <you@example.com>"]

[workspace.dependencies]
bevy = "0.16"
bevy_rapier2d = { version = "0.31", features = ["simd-stable"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
bytemuck = { version = "1.15", features = ["derive"] }
wgpu = "24.0.5"
half = "2"
# Dev / test
tempfile = "3"

# WASM specific (crates can opt-in via target cfg)
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }

[workspace.metadata.migration]
phase = 0
