[package]
name = "game_assets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
# Workspace-level flags forward here (the workspace maps embedded_assets to this crate feature):
embedded_assets = ["bevy_embedded_assets"]
processed_assets = [] # placeholder: will switch AssetMode in future

[dependencies]
bevy = { workspace = true }
serde = { workspace = true, optional = true }
bevy_embedded_assets = { version = "0.10", optional = true }

[package.metadata.release]
# placeholder for future release automation
