[package]
name = "game_physics"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_rapier2d = { workspace = true }
# egui not required inside core physics crate (UI lives in demo)
bevy_egui = { workspace = true, optional = true }
rand = "0.8"

# Core game components
game_core = { path = "../game_core" }

[features]
default = []
ui = ["bevy_egui"]
