[package]
name = "game_physics"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
bevy = { workspace = true }
bevy_rapier2d = { workspace = true }
# egui not required inside core physics crate (UI lives in demo)
# UI dependency removed (using basic Bevy UI in demo instead)
rand = "0.8"

# Core game components
game_core = { path = "../game_core" }

[features]
default = []
