[package]
name = "metaball_renderer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Reusable Bevy compute + material renderer for metaballs via WGSL compute pass"
repository = "https://github.com/ahammer/metalrain"

[features]
# Enable presentation pass & shader hot reload by default (hot reload auto no-ops on wasm).
default = ["present", "shader_hot_reload"]
present = []
shader_hot_reload = []
# Embed WGSL shaders directly (skips AssetServer loading; useful for wasm deterministic builds / CI)
embed_shaders = []

[dependencies]
bevy = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
static_assertions = "1.1"
game_assets = { path = "../game_assets" }

[dev-dependencies]
bevy = { workspace = true }
criterion = "0.7"

[[bench]]
name = "coordinates"
harness = false
