[package]
name = "widget_renderer"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
bevy = { workspace = true }
bevy_rapier2d = { workspace = true }
game_core = { path = "../game_core" }
game_physics = { path = "../game_physics" }

[dev-dependencies]
bevy = { workspace = true }
