[package]
name = "architecture_test"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
publish = false

[dependencies]
bevy = { workspace = true }
game_core = { path = "../../crates/game_core" }
metaball_renderer = { path = "../../crates/metaball_renderer" }
game = { path = "../../crates/game" }
game_assets = { path = "../../crates/game_assets" }
