[package]
name = "compositor_test"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
bevy = { workspace = true }
bevy_rapier2d = { workspace = true }
bevy_hui = "0.4"
rand = "0.8"
metaball_renderer = { path = "../../crates/metaball_renderer" }
game_rendering = { path = "../../crates/game_rendering" }
scaffold = { path = "../../crates/scaffold" }
