[package]
name = "physics_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_rapier2d = { workspace = true }
rand = "0.8"

# Internal crates
game_core = { path = "../../crates/game_core" }
game_physics = { path = "../../crates/game_physics" }
metaball_renderer = { path = "../../crates/metaball_renderer" }
game_rendering = { path = "../../crates/game_rendering" }

# The playground always integrates the compositor pipeline to showcase rendering, but other
# optional systems are intentionally left out to keep the demo minimal.
