[package]
name = "compute_balls"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Use crates.io Bevy with default feature set for broad compatibility.
bevy = { version = "0.16.1" }
bytemuck = { version = "1", features = ["derive"] }
rand = "0.8"

[profile.dev.package.bevy]
opt-level = 3
