[package]
name = "bm_gameplay"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
bevy = { workspace = true }
bevy_rapier2d = { workspace = true }
bm_core = { path = "../core" }
bm_physics = { path = "../physics" }
bm_rendering = { path = "../rendering" }
bm_config = { path = "../config" }
rand = "0.8"

[features]
default = []
