[package]
name = "integration_tests"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
bevy = { workspace = true }
bevy_rapier2d = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
bm_core = { path = "../core" }
bm_physics = { path = "../physics" }
bm_rendering = { path = "../rendering" }
bm_gameplay = { path = "../gameplay" }
bm_metaballs = { path = "../metaballs", optional = true }
bm_debug_tools = { path = "../debug_tools", optional = true }
bm_hot_reload = { path = "../hot_reload", optional = true }
bm_config = { path = "../config" }

[features]
default = []
# Enable all optional systems for exhaustive integration coverage later
full = ["bm_metaballs", "bm_debug_tools", "bm_hot_reload/native-watch"]
# Rendering feature sets:
rendering_headless = ["bm_rendering/headless"]
rendering_full = ["bm_rendering/golden", "bm_rendering/instancing", "bm_rendering/background_light", "bm_rendering/gpu_capture", "bm_metaballs/golden"]

[dev-dependencies]
# Legacy reference crate (outside game/ tree) for parity tests
ball_matcher = { path = "../../../legacy" }

[package.metadata]
purpose = "Black-box style integration tests across published plugin APIs."
