[package]
name = "bm_metaballs"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
bevy = { workspace = true }
bm_core = { path = "../core" }
bm_rendering = { path = "../rendering" }
bm_config = { path = "../config" }
bm_gameplay = { path = "../gameplay" } # needed for Clusters resource

[features]
default = []
golden = ["bm_rendering/golden"]
