[package]
name = "metaballs_demo"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false
description = "Focused metaballs visualization demo (feature gated)."

[dependencies]
bevy = { workspace = true }
bm_core = { path = "../../crates/core" }
bm_config = { path = "../../crates/config" }
bm_physics = { path = "../../crates/physics" }
bm_rendering = { path = "../../crates/rendering" }
bm_gameplay = { path = "../../crates/gameplay" }
bm_metaballs = { path = "../../crates/metaballs", optional = true }
bevy_rapier2d = { workspace = true }

[features]
default = []
metaballs = ["bm_metaballs"]
debug = []
