[package]
name = "spawn_demo"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
bevy = { workspace = true }
bm_core = { path = "../../crates/core" }
bm_config = { path = "../../crates/config" }
bm_physics = { path = "../../crates/physics" }
bm_rendering = { path = "../../crates/rendering" }
bm_gameplay = { path = "../../crates/gameplay" }

[features]
default = []
